VariableValue, CvValue, DecVariableValue now past the set of tests